working on contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -16,7 +16,7 @@ body {
     padding: 0;
     color: #fdfffa;
     background-color: whitesmoke;
-    text-shadow: .5px .5px rgb(9, 8, 8);
+    /* text-shadow: .5px .5px rgb(9, 8, 8); */
     /* text-shadow: 1px 1px rgb(96, 25, 25); */
 }
 
@@ -161,7 +161,7 @@ main {
 /* main section heading */
 h2 {
     border-bottom: 1px solid rgb(9, 8, 8, .75);
-    color: rgb(9, 8, 8, .6);
+    color: rgb(9, 8, 8);
 }
 
 /* container headings */
@@ -188,7 +188,7 @@ div ul a {
     margin-bottom: 2rem;
     background-color: #d4d1ce;
     color: rgb(9, 8, 8);
-    text-shadow: 1px 1px #fdfffa;
+    /* text-shadow: 1px 1px #fdfffa; */
     border: 2px solid black;
     border-radius: .5em;
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.3), 0 3px 12px 0 rgba(0, 0, 0, 0.3);
